TestSuite/errors/err0040.pas
type TClass = class(integer)
end;

begin
end.